<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03A9F4"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        style="@style/myView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3F51B5"
        android:gravity="center"
        android:text="@string/textview" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_et"
            style="@style/myView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="2"
            android:hint="@string/et_et" />

        <Button
            android:id="@+id/bt_go_second_activity"
            style="@style/myView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/butt_01"
            android:textSize="22sp" />
    </LinearLayout>

    <Switch
        android:id="@+id/sq_sq"
        style="@style/myView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sw_name" />

    <CheckBox
        android:id="@+id/cb_cb"
        style="@style/myView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/check_box" />

    <ToggleButton
        android:id="@+id/tb_tv"
        style="@style/myView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>